# rule-engine-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-notes.md  delivery-contract.md  embedding-examples.md  examples.md  linkedin-project-kit.md  rule-language.md  scope-boundary.md
rule_engine/: __init__.py  api.py  compiler.py  declarative.py  decorators.py  engine.py  models.py  registry.py  runner.py  runtime.py  sinks.py  types.py  window.py
sample_data/: dual_source_gap_events.ndjson  source_gap_events.ndjson
sample_data/examples/: daily_usage_review.ndjson  facility_temperature_spike.ndjson  fleet_heartbeat_gap.ndjson
sample_rules/: dual_source_gap.yaml  source_gap.yaml
sample_rules/examples/: daily_usage_review.yaml  facility_temperature_spike.yaml  fleet_heartbeat_gap.yaml
tests/: test_declarative.py  test_engine.py  test_examples.py  test_golden_replay.py  test_runner.py  test_sink_integration.py  test_sinks.py
tests/fixtures/replay/: absence_no_alert.case.json  absence_no_alert.expected.json  composite_timeout.case.json  composite_timeout.expected.json
