[project]
name = "rule-engine"
version = "0.1.0"
description = "Core runtime for a generic declarative rule engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
